[package]
name = "rust-audio-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
alsa = "0.9"
libc = "0.2"
jack = { version = "0.11", optional = true }
cpal = "0.15.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
hound = "3.5"
ringbuf = "0.3"
clap = { version = "4.0", features = ["derive"] }